# tokio-kafka

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  appveyor.yml
examples/: console-consumer.rs  console-producer.rs  topic-metadata.rs
src/: codec.rs  compression.rs  consumer.rs  errors.rs  lib.rs  macros.rs  producer.rs  protocol.rs
src/client/: builder.rs  client.rs  cluster.rs  codec.rs  config.rs  metadata.rs  metrics.rs  middleware.rs  mock.rs  mod.rs  proto.rs  record.rs  request.rs  response.rs  service.rs  state.rs  version.rs
src/compression/: gzip.rs  lz4.rs  mod.rs  snappy.rs
src/consumer/: assignor.rs  builder.rs  config.rs  consumer.rs  coordinator.rs  fetcher.rs  mod.rs  protocol.rs  serialization.rs  subscribed.rs  subscriptions.rs
src/network/: codec.rs  conn.rs  dns.rs  mod.rs  pool.rs  proto.rs  request.rs  resolver.rs  response.rs  stream.rs
src/producer/: accumulator.rs  api.rs  batch.rs  builder.rs  config.rs  interceptor.rs  mod.rs  partitioner.rs  producer.rs  record.rs  sender.rs  serialization.rs
src/protocol/: api_key.rs  api_versions.rs  code.rs  encode.rs  fetch.rs  group.rs  header.rs  list_offset.rs  message.rs  metadata.rs  mod.rs  offset.rs  offset_commit.rs  offset_fetch.rs  parse.rs  parser.rs  produce.rs  record.rs  schema.rs  versions.rs  zigzag.rs
src/serialization/: bytes.rs  encoding.rs  json.rs  mod.rs  noop.rs  raw.rs  str.rs
tests/: integration_test.rs  integration_test.sh
tests/common/: mod.rs
tests/docker/v0.10/: Dockerfile  setup-tests.sh
tests/docker/v0.11/: Dockerfile
tests/docker/v0.8/: Dockerfile  docker-compose.yml
tests/docker/v0.9/: Dockerfile
tests/docker/v1.0/: Dockerfile
tests/docker/v1.1/: Dockerfile  docker-compose.yml  setup-tests.sh  setup-topics.sh
