[package]
name = "tokio-kafka"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]

[dependencies]
log = "0.3"
error-chain = "0.10"
lazy_static = "0.2"
bytes = "0.4"
nom = { version = "2.2", features = ["verbose-errors"] }
crc = "1.4"
twox-hash = "1.1"
time = "0.1"
hexplay = "0.1"

futures = "0.1"
futures-cpupool = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-timer = "0.1"
tokio-tls = { version = "0.1", features = ["tokio-proto"] }
native-tls = "0.1"

[dev-dependencies]
pretty_env_logger = "0.1"
getopts = "0.2"