[package]
name = "tokio-kafka"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]

[features]
default = ["snappy", "gzip", "lz4"]
snappy = ["snap"]
gzip = ["flate2"]
lz4 = ["lz4-compress"]

[dependencies]
log = "0.3"
error-chain = "0.10"
lazy_static = "0.2"
bytes = "0.4"
nom = { version = "2.2", features = ["verbose-errors"] }
crc = "1.4"
twox-hash = "1.1"
time = "0.1"
hexplay = "0.1"
encoding = "0.2"
serde = "1.0"
serde_derive = "1.0"
prometheus = "0.2"

futures = "0.1"
futures-cpupool = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-middleware = { git = "https://github.com/tokio-rs/tokio-middleware" }
tokio-timer = "0.1"
tokio-retry = "0.1"
tokio-tls = { version = "0.1", features = ["tokio-proto"] }
native-tls = "0.1"

flate2 = { version = "0.2", optional = true }
snap = { version = "0.2", optional = true }
lz4-compress = { version = "0.1", optional = true }

clippy = {version = "*", optional = true}

[dev-dependencies]
pretty_env_logger = "0.1"
getopts = "0.2"

serde_json = "1.0"

tokio-file-unix = "0.4"
