[package]
name = "tokio-kafka"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]

[features]
default = ["snappy", "gzip", "lz4", "encoding", "json"]
snappy = ["snap"]
gzip = ["flate2"]
lz4 = ["lz4-compress"]
json = ["serde_json"]

[dependencies]
log = "0.4"
error-chain = "0.11"
lazy_static = "1.0"
bytes = "0.4"
nom = { version = "3.2", features = ["verbose-errors"] }
crc = "1.4"
twox-hash = "1.1"
time = "0.1"
rand = "0.4"
hexplay = "0.2"
byteorder = "1.0"
serde = "1.0"
serde_derive = "1.0"
prometheus = "0.3"

futures = "0.1"
futures-cpupool = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-timer = "0.1"
tokio-retry = "0.1"
tokio-tls = { version = "0.1", features = ["tokio-proto"] }
native-tls = "0.1"

flate2 = { version = "1.0", optional = true }
snap = { version = "0.2", optional = true }
lz4-compress = { version = "0.1", optional = true }

encoding = { version = "0.2", optional = true }
serde_json = { version = "1.0", optional = true }

clippy = {version = "*", optional = true}

[dev-dependencies]
pretty_env_logger = "0.2"
getopts = "0.2"
typemap = "0.3"

[target.'cfg(unix)'.dev-dependencies]
tokio-file-unix = "0.4"
